test/regression/sema/valid/shadowing.tc
int main() {
    int x = 1;
    {
        const int x = 2;
        x + 1;
    }
    return x;
}
