test/regression/sema/invalid/call_after_decl.tc
int main() {
    return later();
}

int later() {
    return 1;
}
